:feat: refactor storage service to support batch downloads and improve file handling